--- a/package.json
+++ b/package.json
@@ -80,6 +80,9 @@
 		"react-dom": "^18.2.0",
 		"react-polyfills": "0.0.1",
 		"react-router": "^6.0.2",
-		"react-router-dom": "^6.4.3"
+		"react-router-dom": "^6.4.3",
+		"react-slick": "^0.29.0",
+		"react-swapi": "^1.0.1",
+		"slick-carousel": "^1.8.1"
 	}
 }
